support spring boot 2.x version